--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
-<html>
-<head>
-<title>William's Blog</title>
-</head>
-<body>
-Hello World!
-</body>
-</html>
+---
+layout: default
+title: William Lindner, 2 n's.
+---
+
+<div id="home">
+  <h1>Blog Posts</h1>
+
+  <ul class="posts">
+    {% for post in site.posts %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
