testing tag plugins

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: William Lindner, 2 n's.
 ---
 
 <div id="home">
+  {% render_time page rendered at: %}
   <h1>Blog Posts</h1>
 
   <ul class="posts">
