--- a/app/projects.html
+++ b/app/projects.html
@@ -5,4 +5,5 @@ title: Projects - William Lindner, 2 n's.
 
 <div id="projects">
 	<div class="project">Spotsy</div>
+	<a target="_blank" href="/projects/ApartmentsNearMetro.html"><div class="project">ApartmentsNearMetro.com</div></a>
 </div>
