Added a readme. Linked to SpotsyApp.com

--- a/app/projects.html
+++ b/app/projects.html
@@ -4,6 +4,6 @@ title: Projects - William Lindner, 2 n's.
 ---
 
 <div id="projects">
-	<div class="project">Spotsy</div>
+	<a target="_blank" href="http://spotsyapp.com"><div class="project">Spotsy</div></a>
 	<a target="_blank" href="/projects/ApartmentsNearMetro.html"><div class="project">ApartmentsNearMetro.com</div></a>
 </div>
