--- a/app/about.html
+++ b/app/about.html
@@ -4,5 +4,5 @@ title: About - William Lindner, 2 n's.
 ---
 
 <div id="about">
-	I still need to put something here.
+	Whoops, I still need to put something here.
 </div>
