--- a/app/projects.html
+++ b/app/projects.html
@@ -5,5 +5,5 @@ title: Projects - William Lindner, 2 n's.
 
 <div id="projects">
 	<a target="_blank" href="http://spotsyapp.com"><div class="project">Spotsy</div></a>
-	<a target="_blank" href="/projects/ApartmentsNearMetro.html"><div class="project">ApartmentsNearMetro.com</div></a>
+	<a href="/projects/ApartmentsNearMetro.html"><div class="project">ApartmentsNearMetro.com</div></a>
 </div>
