--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,13 @@ title: William Lindner, 2 n's.
 ---
 
 <div id="home">
-  <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li>
+      	<a href="{{ post.url }}">{{ post.title }}</a>
+      	<br />
+      	<span>{{ post.date | date_to_string }}</span>
+      </li>
     {% endfor %}
   </ul>
 </div>
