Added the ApartmentsNearMetro.com project.

--- a/app/projects.html
+++ b/app/projects.html
@@ -14,10 +14,12 @@ title: Projects - William Lindner, 2 n's.
   </div>
 
   <div class="project">
-    <div class="thumbnail" style="background-image: url('/img/projects/courier.png')"></div>
-    <h2>Courier</h2>
-    <h4>Web App</h4>
-    <p>Share leads with your partners.</p>
+    <a style="display:block" target="_blank" href="/projects/ApartmentsNearMetro.html">
+      <div class="thumbnail" style="background-image: url('/img/projects/anm-logo.png')"></div>
+      <h2>Apartments Near Metro</h2>
+      <h4>Web App</h4>
+      <p>Find your place to live in the most active areas in DC. This project has been retired. Click here to read more.</p>
+    </a>
   </div>
 
   <div class="project">
@@ -54,5 +56,12 @@ title: Projects - William Lindner, 2 n's.
       <h4>Open Source</h4>
       <p>This project aims to give you a starting point for a large Client Side MV* webapp.</p>
     </a>
+  </div>
+
+  <div class="project">
+    <div class="thumbnail" style="background-image: url('/img/projects/courier.png')"></div>
+    <h2>Courier</h2>
+    <h4>Web App</h4>
+    <p>Share leads with your partners.</p>
   </div>
 </div>
