Added some 'About' text.

--- a/app/about.html
+++ b/app/about.html
@@ -4,5 +4,7 @@ title: About - William Lindner, 2 n's.
 ---
 
 <div id="about">
-	Whoops, I still need to put something here.
+	I'm a software developer living in San Francisco. I like fast cars, cheap women, and improvisational comedy.
+
+	I started programming in Python, learned Java and C++ at Virginia Tech, and been making websites since before it was cool.
 </div>
